2005-11-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lilycall.py (get_env): set PANGO_PREFIX.
	
2005-11-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lilycall.py (get_env): opps. need to copy HOME too.

2005-10-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* setup.py (plist): typo.

2005-06-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lilycall.py (check_fontconfig): create cache file if not
	existing. This prevents spurious warnings on the 2nd run.

2005-06-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* LilyPond.py (TinyTinyDocument.createProcessLog): set close
	callback.
	(TinyTinyDocument.processLogClosed_): remove PLWC reference upon
	closing. This fixes closing compile window and rerunning it. 

	* ProcessLog.py (ProcessLogWindowController.windowWillClose_):
	hack: add close_callback.

2005-06-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lilycall.py (Call.__init__): return if error found.

	* LilyPond.py (TinyTinyDocument.compileMe): report errorstring if
	lilycall finds one.
	
2005-06-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lilycall.py (Call.set_gui_options): new function. Don't munge
	paths for non GUI calls.
 
2005-06-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lilycall.py (Call.open_pdfs): remove stray p.

2005-06-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lilycall.py (get_env): set FONTCONFIG_PATH, so local.conf is found.
	(check_fontconfig): set fonts.cache-1

	* LilyPond.py (TinyTinyDocument.compileMe): CallBinder: closure
	for lilycall + document callbacks.
	(TinyTinyDocument.compileMe): check need_fc_update.

	* ProcessLog.py (ProcessLogWindowController.addText): new function.
	(ProcessLogWindowController.finish): stop throbber before callback.

	* lilycall.py (Call.get_process): new function.
	(check_fontconfig): symlink /System/Library/Fonts to
	prefix/share/SystemFonts.
	(Call.get_fc_cache_process): run fc-cache.

2005-06-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* MainMenu.nib/classes.nib (Module): add Find functionality: