@@ -4,5 +4,5 @@ by
 Han-Wen Nienhuys, Jan Nieuwenhuizen,
 with help of
 <a
-href="http://www.lilypond.org/doc/v2.5/Documentation/out-www/THANKS.html">many others</a>.
+href="http://www.lilypond.org/doc/v2.6/Documentation/THANKS.html">many others</a>.
 
