@@ -1,3 +1,10 @@
+2005-11-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* Credits.html: update doc link.
+
+	* lilycall.py (check_fontconfig): add
+	appdir/Contents/Resources/share/fonts
+
 2005-11-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lilycall.py (get_env): set PANGO_PREFIX.
